--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 </head>
 <body>
     <!-- ローディング画面 -->
-    <div id="loading"></div>
+    <div id="loading">
+        <p>Loading...</p>
+        <div id="loading-screen"></div>
+    </div>
 
     <section class="hero">
         <h1 class="title">WCB Fashion<br>Collection</h1>
@@ -63,7 +66,7 @@
             <p>
                 東京都港区六本木2-4-5<br>
                 営業日：金・土・日・祝<br>
-                営業時間：11:00〜18:00
+                営業時間:11:00〜18:00
             </p>
         </div>
     </section>
