--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WCB Fashion Collection</title>
+    <title>poppo_fashionstore</title>
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,18 +19,15 @@
         <div id="loading-screen"></div>
     </div>
 
-    <section class="hero">
-        <h1 class="title">WCB Fashion<br>Collection</h1>
+    <section class="main-visual">
+        <h1 class="title">もっと、私らしく</h1>
     </section>
 
     <section class="concept">
         <div class="wrapper">
             <h2 class="title">Concept</h2>
             <p>
-                当たり前の日々を、ほんの少しだけ華やかに彩りたい。そんな思いから新しいファッションブランドが生まれました。
-                軽やかで優しく、着心地のいい素材をベースにしているため、
-                どんな瞬間でも柔らかな笑顔で過ごせるはず。
-                WCB Fashion Collectionで、「あなたらしさ」を一緒に探してみませんか？
+                ああああああああああああ
             </p>
         </div>
         <img src="images/concept.jpg" alt="">
@@ -59,12 +56,11 @@
     <section class="shop">
         <div class="shop-content wrapper">
             <h2 class="title">Shop</h2>
-            <p>いつでも送料無料。便利なオンラインショップをご利用ください。</p>
-            <a class="btn" href="#">オンラインショップ</a>
+            <p>送料無料（海外輸入のため発送までに二週間ほどいただきます）</p>
+            <a class="btn" href="https://poppo.fashionstore.jp/">poppoオンラインストア</a>
             
-            <h3>六本木店</h3>
+            <h3>あああ</h3>
             <p>
-                東京都港区六本木2-4-5<br>
                 営業日：金・土・日・祝<br>
                 営業時間:11:00〜18:00
             </p>
