titleのclass名変えずに指定したい

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     </div>
 
     <section class="main-visual">
-        <h1 class="title">もっと、私らしく</h1>
+        <h2 class="title">もっと、私らしく</h2>
     </section>
 
     <section class="concept">
         <div class="wrapper">
+            <!-- title名は変えずにスタイルを当てる -->
             <h2 class="title">Concept</h2>
             <p>
                 ああああああああああああ
