レイアウト完成

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
-    <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
+    <!-- ファビコンの設定 -->
+    <!-- <link rel="icon" href="images/favicon.svg" type="image/svg+xml"> -->
 </head>
 <body>
     <!-- ローディング画面 -->
@@ -23,9 +24,18 @@
         <h2 class="title">もっと、私らしく</h2>
     </section>
 
+    <section class="catch">
+        <div class="wrapper">
+            <h2 class="title">Catch</h2>
+            <p>
+                ううううううううう
+            </p>
+        </div>
+        <img src="../images/main-visual.png" alt="">
+    </section>
+
     <section class="concept">
         <div class="wrapper">
-            <!-- title名は変えずにスタイルを当てる -->
             <h2 class="title">Concept</h2>
             <p>
                 ああああああああああああ
@@ -57,7 +67,8 @@
     <section class="shop">
         <div class="shop-content wrapper">
             <h2 class="title">Shop</h2>
-            <p>送料無料（海外輸入のため発送までに二週間ほどいただきます）</p>
+            <p>送料無料</p>
+            <br>※海外輸入のため発送までに二週間ほどいただきます）
             <a class="btn" href="https://poppo.fashionstore.jp/">poppoオンラインストア</a>
             
             <h3>あああ</h3>
